add transaction query